Merge stderr and stdout